tests/errors/union_with_ty_args/union_with_ty_args.c
#error union_with_ty_args.union_with_ty_args:6:10 Type arity mismatch. The type 'MyInt' expected 0 arguments; but given 1.
